Fixed access to deck JSON files in Client package.